# ecfr

./: .gitignore  Feedback.docx  README.md  agriculture.ipynb  commerce.ipynb  defense.ipynb  ecfr.py  ecfr_init.ipynb  ecfr_insights_demo.ipynb  energy.ipynb  pyproject.toml  requirements.txt
api/: __init__.py  db.py
api/config/: ecfr_db_config.json  gunicorn.conf.py
api/controller/: accounts.py  agencies.py  cfr_insights.py  cfr_references.py  customers.py  database.py  titles.py  transfers.py
api/controller/utils/: listgenerator.py  metrics.py  users.py
api/dtos/: account.py  agency.py  amendment.py  amendmentdate.py  balance.py  cfr_insight.py  cfr_reference.py  cfr_references.py  createaccount.py  createcustomer.py  createinsight.py  createtransfer.py  customer.py  date.py  forceinit.py  fromtoquery.py  initdb.py  issuedate.py  title.py  transfer.py
api/dtos/utils/: createuser.py  user.py
api/model/: accounts.py  agencies.py  amendments.py  balances.py  cfr_insights.py  cfr_references.py  customers.py  database.py  title.py  transfers.py
api/model/utils/: users.py
api/view/: accounts.py  agencies.py  cfr_insights.py  cfr_references.py  customers.py  database.py  titles.py  transfers.py
api/view/utils/: users.py
tests/: conftest.py  test_factory.py
