[project]
name = "api"
version = "0.0.1"
description = "The is Satish Suryanarayan's implementation of API for CFR insights."
dependencies = [
    "Flask==3.1.1",
    "flask-smorest==0.46.1",
    "gunicorn==23.0.0",
    "mysql-connector-python==9.3.0",
    "requests==2.32.3",
    "SQLAlchemy==2.0.41",
    "urllib3==2.4.0",
]

requires-python = ">=3.13.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["api"]

[project.optional-dependencies]
dev = [
    "ipympl==0.9.7",
    "jupyterlab==4.4.3",
    "matplotlib==3.10.3",
    "pandas==2.3.0",
    "pytest==8.3.5",
]
